create edit endpoint
