# internal/api/api.go
@@ -177,6 +177,7 @@ func (e *engine) InitRoutes() {
 		//bookmark
 		privateBase.POST("/bookmarks", allHandlers.bookmarkHandler.AddBookmark)
 		privateBase.GET("/bookmarks", allHandlers.bookmarkHandler.GetBookmarks)
+		privateBase.PUT("bookmarks/:id", allHandlers.bookmarkHandler.EditBookmark)
 	}
 
 	//test
